tests/compiler/errors/generic_enum_param_mismatch.casa
# expect: TYPE_MISMATCH
import "std"

fn takes_option_str x:Option[str] { x drop }

fn main {
    42 Option::Some takes_option_str
}
